--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    color: white;
 }
 body{
     background: url('assets/bg.jpg');
@@ -11,6 +12,9 @@ body{
     height: 100dvh;
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 body::before{
 content: "";
@@ -19,4 +23,44 @@ width: 100%;
 height: 100dvh;
 background: rgb(0, 0, 0,0.15);
 backdrop-filter: blur(15px);
+}
+.main-container{
+    width: 300px;
+    height:496px;
+    z-index: 1;
+    background: linear-gradient(to top,rgb(0, 0, 0, 0.15),
+    rgb(255, 255, 255, 0.15));
+    border-radius: 12px;
+    backdrop-filter: blur;
+    padding: 20px;
+}
+.input-container{
+ position: relative;
+}
+.city-input{
+    width: 100%;
+    padding: 10px 16px;
+    border-radius: 99px;
+    border:3px solid transparent;
+    background: rgba(0, 0, 0, 0.15);
+    outline: none;
+    font-weight: 500;
+    transition: 0.25s border;
+    padding-right: 45PX;
+}
+.city-input :focus{
+     border: 3px solid rgb(0,0 ,0 , 0.15);
+}
+.city-input::placeholder{
+    color: rgba(255, 255, 255, 0.75);
+}
+.search-btn {
+  position: absolute;
+  right: 16px;
+  top: 15%;
+  transform: translateY(20%);
+  background: none;
+  display:flex;
+  border: none;
+  cursor: pointer;
 }
