--- a/style.css
+++ b/style.css
@@ -106,10 +106,71 @@ backdrop-filter: blur(15px);
 
 }
 .weather-summary-img{
-    width: 120px;
-    height: 120px;
+    width: 90px;
+    height: 90px;
 }
 .weather-summary-info{
     text-align: end;
 }
+.weather-conditions-container{
+    display: flex;
+    justify-content: space-between;
+}
+.condition-item{
+   display: flex;
+   align-items: center;
+   gap: 6px;
+   font: 30px;
+}
+.forecast-items-container{
+    display: flex;
+    gap: 15px;
+    overflow: scroll;
+    overflow-x: auto;       /* enables horizontal scrolling */
+    overflow-y: hidden;     /* disables vertical scrolling */
+    padding-bottom: 12px;
+}
+.forecast-items-container::-webkit-scrollbar{
+    height:8px;
+}
+.forecast-items-container::-webkit-scrollbar-track{
+    background: rgb(0, 0, 0, 0.1);
+    border-radius: 99px;
+}
+.forecast-items-container::-webkit-scrollbar-thumb{
+    background:rgb(0,0,0,0.15) ;
+    border-radius: 99px;
+}
+.forecast-item{
+    min-width: 70px;
+    background-color: rgb(255, 255, 255, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 10px;
+    align-items: center;
+    border-radius: 12px;
+    transition: 0.3s background;
+}
+.forecast-item:hover{
+    background: rgb(255, 255, 255, 0.15);
+}
+.forecast-item-img{
+    width: 35px;
+    height: 35px;
+}
 /*END SECTION WEATHER INFO */
+/*SECTION MESSAGE*/
+.section-message{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 15px;
+    margin-top: 25%;
+}
+.section-message img{
+    height: 180px;
+    width: fit-content;
+}
+/*END SECTION MESSEGE*/
